# train-llm

./: .gitignore  README.md  generate_dataset.py  main_legacy.py  pyproject.toml  requirements.txt  setup.py
data/: conversations.txt  large_conversations.txt
src/app/: main.py
src/chat_model_training.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/domains/data_management/domain/: chat_dataset.py
src/domains/inference/application/: generation_service.py
src/domains/model_core/domain/: layers.py  model.py
src/domains/tokenization/adapters/: sentencepiece_tokenizer.py
src/domains/tokenization/domain/: tokenizer.py
src/domains/training/application/: training_service.py
src/domains/training/domain/: checkpoint.py  scheduler.py
src/shared/config/: config.yaml  config_loader.py  training_config.py
src/shared/utils/: data_creation.py  seeding.py
tests/: test_app.py
